--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <div>
             <ul class="nav justify-content-center m-4">
                 <li class="nav-item">
-                    <a class="nav-link fw-bolder" href="#">FAQ</a>
+                    <a class="nav-link fw-bolder" href="https://tonkeeper.helpscoutdocs.com/">FAQ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bolder" href="#">Support</a>
+                    <a class="nav-link fw-bolder" href="https://t.me/help_tonkeeper_bot">Support</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bolder" href="#">Documentation</a>
+                    <a class="nav-link fw-bolder" href="https://github.com/tonkeeper/wallet-api">Documentation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bolder" href="#">Bug Bounty</a>
+                    <a class="nav-link fw-bolder" href="https://t.me/help_tonkeeper_bot">Bug Bounty</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-bolder" href="#">GitHub</a>
+                    <a class="nav-link fw-bolder" href="https://github.com/tonkeeper">GitHub</a>
                 </li>
             </ul>
         </div>
@@ -57,7 +57,7 @@
             <p class="card-text fs-5 mb-5">With the battery, you can pay with tokens without having to purchase TON from exchangers to pay blockchain fees.</p>
             <div class="row">
                 <div class="col-sm-6">
-                    <div class="card p-3">
+                    <div class="card p-3 m-2">
                     <div class="card-body">
                         <h5 class="card-title fs-3 fw-bold text-white mb-4">Start using the battery</h5>
                         <p class="card-text fs-5 mb-5">Update Tonkeeper on iOS and Android to version 4.3, then refill the battery in Settings → Battery. After charging, the battery status will appear on the main screen.</p>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <div class="card p-3">
+                    <div class="card p-3 m-2">
                         <div class="card-body">
                             <h5 class="card-title fs-3 fw-bold text-white mb-4">Charging the battery</h5>
                             <p class="card-text fs-5 mb-5">
@@ -88,11 +88,48 @@
             <div class="card-body">
                 <h5 class="card-title display-4 fw-bold text-white mb-4">Gifts</h5>
                 <p class="card-text fs-5 mb-5">You can give charges to another user by entering his wallet address.</p>
-                <img src="./img/gift.jpg" class="card-img-top" style="width: 500px; border: 5px solid #1d2633;" alt="gift">
+                <img src="./img/gift.jpg" class="card-img-top" style="border: 5px solid #1d2633;" alt="gift">
             </div>
         </div>
     </div>
-    
+    <div class="line mt-5"></div>
+    <div class="f-nav mt-5">
+        <div class="f-nav-group">
+            <div class="f-nav-title mb-3 text-white">Company</div>
+            <div class="f-nav-links">
+                <a target="_blank" class="nav-link mb-2" href="https://t.me/tonkeeper_news">News</a>
+                <a target="_blank" class="nav-link mb-2" href="https://t.me/tonkeeperdev">Chat</a>
+                <a target="_blank" class="nav-link mb-2" href="https://twitter.com/tonkeeper">Twitter</a>
+            </div>
+        </div>
+        <div class="f-nav-group">
+            <div class="f-nav-title mb-3 text-white">Resources</div>
+            <div class="f-nav-links">
+                <a target="_blank" class="nav-link mb-2" href="https://tonkeeper.helpscoutdocs.com/">FAQ</a>
+                <a target="_blank" class="nav-link mb-2" href="https://t.me/help_tonkeeper_bot">Support</a>
+                <a target="_blank" class="nav-link mb-2" href="https://t.me/help_tonkeeper_bot">Suggest a Feature</a>
+            </div>
+        </div>
+        <div class="f-nav-group">
+            <div class="f-nav-title mb-3 text-white">Developers</div>
+            <div class="f-nav-links">
+                <a target="_blank" class="nav-link mb-2" href="https://github.com/tonkeeper/wallet-api">Documentation</a>
+                <a target="_blank" class="nav-link mb-2" href="https://t.me/help_tonkeeper_bot">Bug Bounty</a>
+                <a target="_blank" class="nav-link mb-2" href="https://github.com/tonkeeper">GitHub</a>
+            </div>
+        </div>
+        <div class="f-nav-group"> 
+            <div class="f-nav-title mb-3 text-white">Legal</div>
+            <div class="f-nav-links">
+                <a class="nav-link mb-2" href="/terms">Terms</a>
+                <a class="nav-link mb-2" href="/privacy">Privacy</a>
+            </div>
+        </div>
+    </div>
+    <div class="copyright text-center mt-5 p-5">
+        <div class="text-white">© 2024 Tonkeeper. All rights reserved.</div>
+        <div class="text-white">All trademarks are the property of their respective owners.</div>
+    </div>
 </div>    
     <script src="./js/bootstrap.min.js"></script>
 </body>
